--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,11 @@
 pipeline {
     agent any
 
+    environment {
+        NETLIFY_SITE_ID = 'FIXME: 539da800-69b4-4cbe-a86b-36f97fa34336'
+        NETLIFY_AUTH_TOKEN = credentials('nfp_C2EE1goH2R7WhnKnMSTPSYDws45jy26L2e02')
+    }
+
     stages {
 
         stage('Build') {
@@ -82,6 +87,9 @@ pipeline {
                 sh '''
                     npm install netlify-cli@20.1.1
                     node_modules/.bin/netlify --version
+                    echo "Deploying to production. Site ID: $NETLIFY_SITE_ID"
+                    node_modules/.bin/netlify status
+                    node_modules/.bin/netlify deploy --dir=build --prod
                 '''
             }
         }
